--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-react",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@cyntler/react-doc-viewer": "^1.13.0",
     "@testing-library/jest-dom": "^5.16.5",
