--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-react",
   "version": "0.1.0",
   "private": false,
+  "homepage": "https://potteramy.github.io/portfolio-react",
   "dependencies": {
     "@cyntler/react-doc-viewer": "^1.13.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -38,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
